[#38] Make topology consistently reactive (#39)
Co-authored-by: Stanimir Ivanov <stanimr@protonmail.com>